--- a/gui/GRT/mainwindow.ui
+++ b/gui/GRT/mainwindow.ui
@@ -63,7 +63,7 @@
    <widget class="QTabWidget" name="mainTab">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>8</x>
       <y>5</y>
       <width>996</width>
       <height>541</height>
@@ -617,7 +617,7 @@
         </rect>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="page_24">
         <widget class="QGroupBox" name="groupBox_19">
@@ -672,7 +672,7 @@
           <property name="geometry">
            <rect>
             <x>210</x>
-            <y>100</y>
+            <y>130</y>
             <width>141</width>
             <height>21</height>
            </rect>
@@ -692,7 +692,7 @@
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>100</y>
+            <y>130</y>
             <width>191</width>
             <height>16</height>
            </rect>
@@ -705,7 +705,7 @@
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>70</y>
+            <y>100</y>
             <width>131</width>
             <height>16</height>
            </rect>
@@ -731,7 +731,7 @@
           <property name="geometry">
            <rect>
             <x>210</x>
-            <y>70</y>
+            <y>95</y>
             <width>141</width>
             <height>24</height>
            </rect>
@@ -779,6 +779,29 @@
             <x>590</x>
             <y>70</y>
             <width>200</width>
+            <height>21</height>
+           </rect>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_197">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>70</y>
+            <width>131</width>
+            <height>16</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Training Class Name:</string>
+          </property>
+         </widget>
+         <widget class="QLineEdit" name="dataLabellingTool_className">
+          <property name="geometry">
+           <rect>
+            <x>210</x>
+            <y>65</y>
+            <width>141</width>
             <height>21</height>
            </rect>
           </property>
@@ -1083,7 +1106,7 @@
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>70</y>
+            <y>80</y>
             <width>131</width>
             <height>16</height>
            </rect>
@@ -1096,7 +1119,7 @@
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>30</y>
+            <y>20</y>
             <width>114</width>
             <height>32</height>
            </rect>
@@ -1109,7 +1132,7 @@
           <property name="geometry">
            <rect>
             <x>210</x>
-            <y>70</y>
+            <y>75</y>
             <width>141</width>
             <height>24</height>
            </rect>
@@ -1165,7 +1188,7 @@
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>100</y>
+            <y>105</y>
             <width>191</width>
             <height>16</height>
            </rect>
@@ -1178,10 +1201,33 @@
           <property name="geometry">
            <rect>
             <x>210</x>
-            <y>100</y>
+            <y>105</y>
             <width>141</width>
             <height>21</height>
            </rect>
+          </property>
+         </widget>
+         <widget class="QLineEdit" name="dataLabellingTool_timeseriesClassificationMode_className">
+          <property name="geometry">
+           <rect>
+            <x>210</x>
+            <y>50</y>
+            <width>141</width>
+            <height>21</height>
+           </rect>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_198">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>55</y>
+            <width>181</width>
+            <height>16</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Training Class Name:</string>
           </property>
          </widget>
         </widget>
@@ -1356,7 +1402,7 @@
         </rect>
        </property>
        <property name="currentIndex">
-        <number>4</number>
+        <number>6</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -1696,7 +1742,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="page_27">
        <widget class="QGroupBox" name="groupBox_14">
